--- a/Weekly2/Weekly2.vcxproj
+++ b/Weekly2/Weekly2.vcxproj
@@ -139,8 +139,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Task1.cpp" />
-    <ClCompile Include="Task2.cpp" />
+    <ClCompile Include="Tasks.cpp" />
+    <ClCompile Include="IgnoreThis.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
