--- a/Weekly2/Weekly2.vcxproj.filters
+++ b/Weekly2/Weekly2.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Task1.cpp">
+    <ClCompile Include="Tasks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Task2.cpp">
+    <ClCompile Include="IgnoreThis.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
